recursion.cons.lessons.recursion.cons.Length.scala.error
length:2: error: value empty is not a member of List[Int]
	if(l.empty) {
             ^