recursion.cons.lessons.recursion.cons.Length.scala.code
def length(l:List[Int]): Int = {
	if(l.empty) {
		return 0;
	}
	return 1 + length(l.tail);
}